--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import './reset.css';
 @import './button.css';
 @import './logo.css';
