--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -6,6 +6,8 @@
   :root {
     --hmc-primary: #0f3665;
     --hmc-primary-foreground: #fff;
+    --hmc-tertiary: #04bce9;
+    --hmc-tertiary-foreground: #fff;
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
@@ -36,6 +38,8 @@
   .dark {
     --hmc-primary: #fff;
     --hmc-primary-foreground: #0f3665;
+    --hmc-tertiary: #fff;
+    --hmc-tertiary-foreground: #0f3665;
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
     --card: 222.2 84% 4.9%;
